updated CLI and finished CRUD